Fixed layout issues

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -68,7 +68,7 @@ html, body, .body {
           position: relative;
 
           &.active a, a:hover{
-              background-color: rgba(0, 0, 0, 0.3);
+              background-color: #42bff4;
               color: white
           }
 
